<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nimku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/data_nim" />

    <TextView
        android:id="@+id/namaku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nimku"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:text="@string/data_nama" />

    <TextView
        android:id="@+id/alamatku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namaku"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:text="@string/data_alamat" />

    <TextView
        android:id="@+id/teleponku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alamatku"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:text="@string/data_telp" />

    <TextView
        android:id="@+id/emailku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teleponku"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:text="@string/data_email" />

    <ImageView
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailku"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="130dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/fotoku" />

</RelativeLayout>